Добавил core components и services assembly в список для активации в плисте.

--- a/Hoppy time/Info.plist
+++ b/Hoppy time/Info.plist
@@ -5,6 +5,8 @@
 	<key>TyphoonInitialAssemblies</key>
 	<array>
 		<string>HTMainAssembly</string>
+		<string>HTServicesAssembly</string>
+		<string>HTCoreComponentsAssembly</string>
 	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
